
PIG-3552: UriUtil used by reducer estimator should support viewfs (amatsukawa via aniket486)

PIG-3549: Print hadoop jobids for failed, killed job (aniket486)

PIG-3047: Check the size of a relation before adding it to distributed cache in Replicated join (aniket486)

PIG-3480: TFile-based tmpfile compression crashes in some cases (dvryaboy via aniket486)

BUG FIXES

PIG-3820: TestAvroStorage fail on some OS (daijy)

PIG-3818: PIG-2499 is accidently reverted (daijy)

PIG-3516: pig does not bring in joda-time as dependency in its pig-template.xml (daijy)

PIG-3753: LOGenerate generates null schema (daijy)

PIG-3782: PushDownForEachFlatten + ColumnMapKeyPrune with user defined schema failing due to incorrect UID assignment (knoguchi via daijy)

PIG-3779: Assert constructs ConstantExpression with null when no comment is given (thedatachef via cheolsoo)

PIG-3777: Pig 12.0 Documentation (karinahauser via daijy)

PIG-3774: Piggybank Over UDF get wrong result (daijy)

PIG-3657: New partition filter extractor fails with NPE (cheolsoo)

PIG-3347: Store invocation brings side effect (daijy)

PIG-3670: Fix assert in Pig script (daijy)

PIG-3741: Utils.setTmpFileCompressionOnConf can cause side effect for SequenceFileInterStorage (aniket486)

PIG-3641: Split "otherwise" producing incorrect output when combined with ColumnPruning (knoguchi)

PIG-3677: ConfigurationUtil.getLocalFSProperties can return an inconsistent property set (rohini)

PIG-3621: Python Avro library can't read Avros made with builtin AvroStorage (rusell.jurney via cheolsoo)

PIG-3592: Should not try to create success file for non-fs schemes like hbase (rohini)

PIG-3572: Fix all unit test for during build pig with Hadoop 2.X on Windows (ssvinarchukhorton via daijy)

PIG-2629: Wrong Usage of Scalar which is null causes high namenode operation (rohini)

PIG-3593: Import jython standard module fail on cluster (daijy)

PIG-3576: NPE due to PIG-3549 when job never gets submitted (lbendig via cheolsoo)
