@@ -34,6 +34,8 @@ PIG-3480: TFile-based tmpfile compression crashes in some cases (dvryaboy via an
 
 BUG FIXES
 
+PIG-3826: Outer join with PushDownForEachFlatten generates wrong result (daijy)
+
 PIG-3820: TestAvroStorage fail on some OS (daijy)
 
 PIG-3818: PIG-2499 is accidently reverted (daijy)
